--- a/src/components/03.organisms/Container/container.module.scss
+++ b/src/components/03.organisms/Container/container.module.scss
@@ -1,7 +1,7 @@
 .container {
   padding: 0 2em;
 
-  @media (max-width: 1200px) {
+  @media (max-width: 1460px) {
     padding: 0 1em;
   }
 }
@@ -11,7 +11,7 @@
   flex: 1;
   padding: 4em;
   
-  @media (max-width: 1200px) {
+  @media (max-width: 1460px) {
     padding: 1em;
   }
 } 
